mobile header finished and starting first section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-	<title>Document</title>
+	<title>Alura Geek</title>
 </head>
 <body>
-	
+	<header class="header">
+		<div class="header__caixa">
+			<img src="./assets/img/Logo.svg" alt="Logo da Alura Geek" class="header__img">
+			<a href="#" class="button button--p button--transp header__link">Login</a>
+			<button type="button" class="header__search"></button>
+		</div>
+	</header>
+	<main>
+		<section class="banner-promo">
+			<h2 class="banner-promo__title">Dezembro Promocional</h2>
+			<p class="banner-promo__text">Produtos selecionados com 33% de desconto</p>
+			<a href="" class="button button--p button--bg banner-promo__button">Ver Consoles</a>
+		</section>
+	</main>
+	<footer>
+		
+	</footer>
 
 
 	<script src="./assets/js/main.js"></script>
