finishing cards layout start js

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,34 @@
 			<p class="banner-promo__text">Produtos selecionados com 33% de desconto</p>
 			<a href="" class="button button--p button--bg banner-promo__button">Ver Consoles</a>
 		</section>
+		<section class="grid-cards">
+			<h2 class="grid-cards__title">Consoles</h2>
+			<a href="#" class="produtos__link grid-cards__ver-tudo">Ver tudo -></a>
+			<div class="card card1">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+			<div class="card card2">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+			<div class="card card3">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+			<div class="card card4">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+		</section>
 	</main>
 	<footer>
 		
