finishing mobile desktop

--- a/public/index.html
+++ b/public/index.html
@@ -21,36 +21,75 @@
 			<p class="banner-promo__text">Produtos selecionados com 33% de desconto</p>
 			<a href="" class="button button--p button--bg banner-promo__button">Ver Consoles</a>
 		</section>
-		<section class="grid-cards">
+		<!-- <section class="grid-cards">
 			<h2 class="grid-cards__title">Consoles</h2>
 			<a href="#" class="produtos__link grid-cards__ver-tudo">Ver tudo -></a>
-			<div class="card card1">	
+			<div class="card">	
 				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
 				<h3 class="card__titulo">Controle XYZ</h3>
 				<p class="card__preco">R$ 60,00</p>
 				<a href="#" class="produtos__link">Ver produto</a>
 			</div>
-			<div class="card card2">	
+			<div class="card">	
 				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
 				<h3 class="card__titulo">Controle XYZ</h3>
 				<p class="card__preco">R$ 60,00</p>
 				<a href="#" class="produtos__link">Ver produto</a>
 			</div>
-			<div class="card card3">	
+			<div class="card">	
 				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
 				<h3 class="card__titulo">Controle XYZ</h3>
 				<p class="card__preco">R$ 60,00</p>
 				<a href="#" class="produtos__link">Ver produto</a>
 			</div>
-			<div class="card card4">	
+			<div class="card">	
 				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
 				<h3 class="card__titulo">Controle XYZ</h3>
 				<p class="card__preco">R$ 60,00</p>
 				<a href="#" class="produtos__link">Ver produto</a>
 			</div>
-		</section>
+		</section> -->
 	</main>
-	<footer>
+	<footer class="footer">
+		<div class="footer-links">
+			<img src="./assets/img/logo.png" alt="Logo Alura Geek" class="footer__logo">
+			<ul class="footer-links__lista">
+				<li class="footer-links__item">
+					<a href="#" class="footer-links__link">Quem somos nós</a>
+				</li>
+				<li class="footer-links__item">
+					<a href="#" class="footer-links__link">Política de privacidade</a>
+				</li>
+				<li class="footer-links__item">
+					<a href="#" class="footer-links__link">Programa fidelidade</a>
+				</li>
+				<li class="footer-links__item">
+					<a href="#" class="footer-links__link">Nossas lojas</a>
+				</li>
+				<li class="footer-links__item">
+					<a href="#" class="footer-links__link">Quero ser franqueado</a>
+				</li>
+				<li class="footer-links__item">
+					<a href="#" class="footer-links__link">Anuncie aqui</a>
+				</li>
+			</ul>
+		</div>
+		<div class="fale-conosco">
+			<form action="#" class="form">
+				<legend class="form__legend">Fale conosco</legend>
+				<fieldset class="form__fieldset">
+					<div class="form__caixa">
+						<input type="text" class="form__nome" id="form__nome">
+						<label for="form__nome" class="form__lbl-nome">Nome</label>
+					</div>
+					<textarea name="textarea" placeholder="Escreva sua mensagem" class="form__text" cols="30" rows="10"></textarea>
+				</fieldset>
+				<button class="button button--bg button--p">Enviar mensagem</button>
+			</form>
+		</div>
+		<div class="footer__copyright">
+			<p>Desenvolvido por Carlos Eduardo Ramos <br> 2022</p>
+		</div>
 		
 	</footer>
 
