small adjusts in home and starting JS for new pages

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<div class="header__caixa">
 			<img src="./assets/img/logo.svg" data-logo alt="Logo da Alura Geek" class="header__img">
 			<input type="text" data-search-input class="header__search hidden" placeholder="O que deseja encontrar?">
-			<a href="#" data-login class="button button--p button--transp header__link">Login</a>
+			<a href="?page=login" data-login class="button button--p button--transp header__link">Login</a>
 			<button type="button" data-search-button="" class="header__search"></button>
 		</div>
 	</header>
