finished login page and routes

--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,22 @@
 <body>
 	<header class="header">
 		<div class="header__caixa">
-			<img src="./assets/img/logo.svg" data-logo alt="Logo da Alura Geek" class="header__img">
+			<a href="index.html">
+				<img src="./assets/img/logo.svg" data-logo alt="Logo da Alura Geek" class="header__img">
+			</a>
 			<input type="text" data-search-input class="header__search hidden" placeholder="O que deseja encontrar?">
 			<a href="?page=login" data-login class="button button--p button--transp header__link">Login</a>
 			<button type="button" data-search-button="" class="header__search"></button>
 		</div>
 	</header>
 	<main>
-		<section class="banner-promo">
+		<!-- ########### HOME MODEL #########  -->
+		<!-- <section class="banner-promo">
 			<h2 class="banner-promo__title">Dezembro Promocional</h2>
 			<p class="banner-promo__text">Produtos selecionados com 33% de desconto</p>
 			<a href="" class="button button--p button--bg banner-promo__button">Ver Consoles</a>
-		</section>
+		</section>  -->
+
 		<!-- <section class="grid-cards">
 			<h2 class="grid-cards__title">Consoles</h2>
 			<a href="#" class="produtos__link grid-cards__ver-tudo">Ver tudo -></a>
@@ -50,6 +54,18 @@
 				<a href="#" class="produtos__link">Ver produto</a>
 			</div>
 		</section> -->
+		<!-- ########### HOME MODEL #########  -->
+
+		<!-- ########### LOGIN MODEL #########  -->
+<!-- 		<section class="login__container">
+			<form action="#" class="login__form">
+				<input type="text" class="login__mail" placeholder="Escreva seu e-mail">
+				<input type="password" class="login__pass" placeholder="Escreva sua senha">
+				<button class="login__submit button button--p button--bg">Entrar</button>
+			</form>
+		</section> -->
+		<!-- ########### LOGIN MODEL #########  -->
+
 	</main>
 	<footer class="footer">
 		<div class="caixa-link-fale">
