finish allproducts page with pagination

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
 		<!-- ########### HOME MODEL #########  -->
 
 		<!-- ########### LOGIN MODEL #########  -->
+
 <!-- 		<section class="login__container">
 			<form action="#" class="login__form">
 				<input type="text" class="login__mail" placeholder="Escreva seu e-mail">
@@ -66,6 +67,47 @@
 		</section> -->
 		<!-- ########### LOGIN MODEL #########  -->
 
+<!-- 		<section class="ver-tudo">
+			<h2 class="ver-tudo__title">Todos os produtos</h2>
+			<button class="button button--bg button--p button--addproduct">Adicionar produto</button>
+			
+			<div class="card">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+			<div class="card">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+			<div class="card">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+			<div class="card">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+			<div class="card">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+			<div class="card">	
+				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
+				<h3 class="card__titulo">Controle XYZ</h3>
+				<p class="card__preco">R$ 60,00</p>
+				<a href="#" class="produtos__link">Ver produto</a>
+			</div>
+		</section> -->
 	</main>
 	<footer class="footer">
 		<div class="caixa-link-fale">
@@ -115,5 +157,6 @@
 
 	<script src="./assets/js/main.js"></script>
 	<script src="./assets/js/header.js"></script>
+
 </body>
 </html>
