refactoring form css

--- a/public/index.html
+++ b/public/index.html
@@ -19,95 +19,7 @@
 		</div>
 	</header>
 	<main>
-		<!-- ########### HOME MODEL #########  -->
-		<!-- <section class="banner-promo">
-			<h2 class="banner-promo__title">Dezembro Promocional</h2>
-			<p class="banner-promo__text">Produtos selecionados com 33% de desconto</p>
-			<a href="" class="button button--p button--bg banner-promo__button">Ver Consoles</a>
-		</section>  -->
 
-		<!-- <section class="grid-cards">
-			<h2 class="grid-cards__title">Consoles</h2>
-			<a href="#" class="produtos__link grid-cards__ver-tudo">Ver tudo -></a>
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-		</section> -->
-		<!-- ########### HOME MODEL #########  -->
-
-		<!-- ########### LOGIN MODEL #########  -->
-
-<!-- 		<section class="login__container">
-			<form action="#" class="login__form">
-				<input type="text" class="login__mail" placeholder="Escreva seu e-mail">
-				<input type="password" class="login__pass" placeholder="Escreva sua senha">
-				<button class="login__submit button button--p button--bg">Entrar</button>
-			</form>
-		</section> -->
-		<!-- ########### LOGIN MODEL #########  -->
-
-<!-- 		<section class="ver-tudo">
-			<h2 class="ver-tudo__title">Todos os produtos</h2>
-			<button class="button button--bg button--p button--addproduct">Adicionar produto</button>
-			
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-			<div class="card">	
-				<img src="./assets/img/xbox-controller.jpg" alt="Controle Xbox" class="card__img">
-				<h3 class="card__titulo">Controle XYZ</h3>
-				<p class="card__preco">R$ 60,00</p>
-				<a href="#" class="produtos__link">Ver produto</a>
-			</div>
-		</section> -->
 	</main>
 	<footer class="footer">
 		<div class="caixa-link-fale">
@@ -139,8 +51,8 @@
 					<legend class="form__legend">Fale conosco</legend>
 					<fieldset class="form__fieldset">
 						<div class="form__caixa">
-							<input type="text" class="form__nome" id="form__nome">
-							<label for="form__nome" class="form__lbl-nome">Nome</label>
+							<input type="text" class="form__nome form__input" id="form__nome">
+							<label for="form__nome" class="form__lbl">Nome</label>
 						</div>
 						<textarea name="textarea" placeholder="Escreva sua mensagem" class="form__text" cols="30" rows="10"></textarea>
 					</fieldset>
