--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,8 @@
 		
 	</footer>
 
-
-	<script src="./assets/js/main.js"></script>
+	<script src="./assets/js/test.js" type="module"></script>
+	<script src="./assets/js/main.js" type="module"></script>
 	<script src="./assets/js/header.js"></script>
 
 </body>
