including mailto in contact form

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
 				</ul>
 			</div>
 			<div class="fale-conosco">
-				<form action="#" class="form">
+				<form method="POST" action="mailto: exemplo@dominio.com"
+				enctype="multipart/form-data">
 					<legend class="form__legend">Fale conosco</legend>
 					<fieldset class="form__fieldset">
 						<div class="form__caixa">
