including required in concact fields

--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,10 @@
 					<legend class="form__legend">Fale conosco</legend>
 					<fieldset class="form__fieldset">
 						<div class="form__caixa">
-							<input type="text" class="form__nome form__input" id="form__nome">
+							<input type="text" class="form__nome form__input required" id="form__nome">
 							<label for="form__nome" class="form__lbl">Nome</label>
 						</div>
-						<textarea name="textarea" placeholder="Escreva sua mensagem" class="form__text" cols="30" rows="10"></textarea>
+						<textarea name="textarea" placeholder="Escreva sua mensagem" class="form__text" cols="30" rows="10" required></textarea>
 					</fieldset>
 					<button class="button button--bg button--p">Enviar mensagem</button>
 				</form>
